fix: add #efefef background to footer to prevent content bleed-through

--- a/src/app/styles/footer.module.css
+++ b/src/app/styles/footer.module.css
@@ -1,6 +1,7 @@
 .footer {
     --footer-height-desktop: 30rem;
     border-top: 1px solid black;
+    background-color: #efefef;
 }
 
 .desktopBottomStrip {
